Fixes a bug with the dark mode toggle not respecting settings on page load when dark mode was set in the browser

--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -57,8 +57,8 @@ pre code {
 }
 
 @keyframes sunRotate {
-  from { transform: translate(-50%, -52%) rotate(0deg) }
-  to { transform: translate(-50%, -52%) rotate(359deg) }
+  from { transform: translate(-50%, -51%) rotate(0deg) }
+  to { transform: translate(-50%, -51%) rotate(359deg) }
 }
 
 .mode-toggle>div .sun {
